--- a/.gitignore
+++ b/.gitignore
@@ -129,7 +129,6 @@ dmypy.json
 .pyre/
 
 # Ffmpeg binaries
-/pyffmpeg/static/bin/darwin
-/pyffmpeg/static/bin/linux
+/pyffmpeg/static/bin
 *.exe
 *.wav
