--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
-language: python            # this works for Linux but is an error on macOS or Windows
-jobs:
-  include:
-    - name: "Python 3.8.0 on Xenial Linux"
-      python: 3.8           # this works for Linux but is ignored on macOS or Windows
-install: pip3 install --upgrade pip  # all three OSes agree about 'pip3'
-# 'python' points to Python 2.7 on macOS but points to Python 3.8 on Linux and Windows
-# 'python3' is a 'command not found' error on Windows but 'py' works on Windows only
-script: pytest
+language: python
+python:
+  - "3.6"      # current default Python on Travis CI
+  - "3.7"
+  - "3.8"
+# command to run tests
+script:
+  - pytest
