--- a/.travis.yml
+++ b/.travis.yml
@@ -6,15 +6,15 @@ jobs:
     - if: branch = developement
 
   include:
-    - if: branch = build-linux:
+    if: branch = build-linux:
       - name: "Python 3.8.0 on Xenial Linux"
         python: 3.8           # this works for Linux but is ignored on macOS or Windows
-    - if: branch = build-darwin:
+    if: branch = build-darwin:
       - name: "Python 3.7.4 on macOS"
         os: osx
         osx_image: xcode11.2  # Python 3.7.4 running on macOS 10.14.4
         language: shell       # 'language: python' is an error on Travis CI macOS
-    - if: branch = build-windows
+    if: branch = build-windows
       - name: "Python 3.8.0 on Windows"
         os: windows           # Windows 10.0.17134 N/A Build 17134
         language: shell       # 'language: python' is an error on Travis CI Windows
