--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,12 @@ jobs:
   include:
     - name: "Python 3.8.0 on Xenial Linux"
       python: 3.8           # this works for Linux but is ignored on macOS or Windows
+      if: branch = developement
     - name: "Python 3.7.4 on macOS"
       os: osx
       osx_image: xcode11.2  # Python 3.7.4 running on macOS 10.14.4
       language: shell       # 'language: python' is an error on Travis CI macOS
+      if: branch = developement
     - name: "Python 3.8.0 on Windows"
       os: windows           # Windows 10.0.17134 N/A Build 17134
       language: shell       # 'language: python' is an error on Travis CI Windows
@@ -19,6 +21,7 @@ jobs:
         - choco install python --version 3.8.0
         - python -m pip install --upgrade pip
       env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
+      if: branch = developement
   install: pip3 install --upgrade pip  # all three OSes agree about 'pip3'
   # 'python' points to Python 2.7 on macOS but points to Python 3.8 on Linux and Windows
   # 'python3' is a 'command not found' error on Windows but 'py' works on Windows only
