--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ jobs:
         - python -m pip install --upgrade pip
       env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
       if: branch = build-windows
-  install: pip3 install --upgrade pip  # all three OSes agree about 'pip3'
+  install: pip install -U pytest  # all three OSes agree about 'pip3'
   # 'python' points to Python 2.7 on macOS but points to Python 3.8 on Linux and Windows
   # 'python3' is a 'command not found' error on Windows but 'py' works on Windows only
   script: pytest
