--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,10 @@ jobs:
         - choco install python --version 3.8.0
         - python -m pip install --upgrade pip
       env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
+      install: pip install -U pytest  # all three OSes agree about 'pip3'
+      # 'python' points to Python 2.7 on macOS but points to Python 3.8 on Linux and Windows
+      # 'python3' is a 'command not found' error on Windows but 'py' works on Windows only
+      script: pytest
       if: branch = build-windows
   install: pip install -U pytest  # all three OSes agree about 'pip3'
   # 'python' points to Python 2.7 on macOS but points to Python 3.8 on Linux and Windows
