--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
-language: python            # this works for Linux but is an error on macOS or Windows
+language: python
+python:
+  - "3.8"
 jobs:
 
   allow_failures:
@@ -17,9 +19,9 @@ jobs:
     - name: "Python 3.8.0 on Windows"
       os: windows           # Windows 10.0.17134 N/A Build 17134
       language: shell       # 'language: python' is an error on Travis CI Windows
-      before_install:
-        - choco install python --version 3.8.0
-        - python -m pip install --upgrade pip
+      #before_install:
+        #- choco install python --version 3.8.0
+        #- python -m pip install --upgrade pip
       env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
       install: pip install -U pytest  # all three OSes agree about 'pip3'
       # 'python' points to Python 2.7 on macOS but points to Python 3.8 on Linux and Windows
