--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ jobs:
       # 'python3' is a 'command not found' error on Windows but 'py' works on Windows only
       script: pytest
       if: branch = build-windows
-  install: pip install -U pytest  # all three OSes agree about 'pip3'
+  install: pip3 install -U pytest  # all three OSes agree about 'pip3'
   # 'python' points to Python 2.7 on macOS but points to Python 3.8 on Linux and Windows
   # 'python3' is a 'command not found' error on Windows but 'py' works on Windows only
   script: pytest
