--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: python
-python:
-  - "3.8"
+
 jobs:
 
   allow_failures:
@@ -20,7 +19,7 @@ jobs:
       os: windows           # Windows 10.0.17134 N/A Build 17134
       language: shell       # 'language: python' is an error on Travis CI Windows
       before_install:
-        #- choco install python --version 3.8.0
+        - choco install python --version 3.8.0
         - python -m pip install --upgrade pip
       env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
       install: pip install -U pytest  # all three OSes agree about 'pip3'
