--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
-language: python            # this works for Linux but is an error on macOS or Windows
+language: python
+
 jobs:
 
   allow_failures:
@@ -6,23 +7,26 @@ jobs:
     - if: branch = developement
 
   include:
-    - if: branch = build-linux:
-      - name: "Python 3.8.0 on Xenial Linux"
-        python: 3.8           # this works for Linux but is ignored on macOS or Windows
-    - if: branch = build-darwin:
-      - name: "Python 3.7.4 on macOS"
-        os: osx
-        osx_image: xcode11.2  # Python 3.7.4 running on macOS 10.14.4
-        language: shell       # 'language: python' is an error on Travis CI macOS
-    - if: branch = build-windows
-      - name: "Python 3.8.0 on Windows"
-        os: windows           # Windows 10.0.17134 N/A Build 17134
-        language: shell       # 'language: python' is an error on Travis CI Windows
-        before_install:
-          - choco install python --version 3.8.0
-          - python -m pip install --upgrade pip
-        env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
-  install: pip3 install --upgrade pip  # all three OSes agree about 'pip3'
-  # 'python' points to Python 2.7 on macOS but points to Python 3.8 on Linux and Windows
-  # 'python3' is a 'command not found' error on Windows but 'py' works on Windows only
-  script: pytest
+    - name: "Python 3.8.0 on Xenial Linux"
+      python: 3.8           # this works for Linux but is ignored on macOS or Windows
+      script: pytest
+      if: branch = build-linux
+    - name: "Python 3.7.4 on macOS"
+      os: osx
+      osx_image: xcode11.2  # Python 3.7.4 running on macOS 10.14.4
+      language: shell       # 'language: python' is an error on Travis CI macOS
+      install: pip3 install -U pytest
+      script: pytest
+      if: branch = build-darwin
+    - name: "Python 3.8.0 on Windows"
+      os: windows           # Windows 10.0.17134 N/A Build 17134
+      language: shell       # 'language: python' is an error on Travis CI Windows
+      before_install:
+        - choco install python --version 3.8.0
+        - python -m pip install --upgrade pip
+      env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
+      install: pip install -U pytest  # all three OSes agree about 'pip3'
+      # 'python' points to Python 2.7 on macOS but points to Python 3.8 on Linux and Windows
+      # 'python3' is a 'command not found' error on Windows but 'py' works on Windows only
+      script: pytest
+      if: branch = build-windows
