--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -10,10 +10,7 @@ on:
 jobs:
   deploy:
 
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
+    runs-on: macOS-latest
 
     steps:
     - uses: actions/checkout@v2
@@ -25,30 +22,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install setuptools wheel twine
-    - name: Build master
-      run: |
-        python setup.py sdist
-      if: branch = master
-    - name: Build Linux
-      run: |
-        python setup.py sdist bdist_wheel
-        python rename.py linux
-      if: branch = build-linux
     - name: Build Darwin
       run: |
         python setup.py sdist bdist_wheel
         python rename.py macos
-      if: branch = build-darwin
-    - name: Build Windows 32
-      run: |
-        python setup.py sdist bdist_wheel
-        python rename.py win32
-      if: branch = build-windows
-    - name: Build Windows x64
-      run: |
-        python setup.py sdist bdist_wheel
-        python rename.py amd64
-      if: branch = build-windows
     - name: Publish
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USER_NAME }}
