--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -22,6 +22,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install setuptools wheel twine
+    - name: Build Darwin 15 and above
+      run: |
+        python setup.py bdist_wheel
+        python rename.py macos15
     - name: Build Darwin
       run: |
         python setup.py bdist_wheel
