--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -18,6 +18,9 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.x'
+    - name: Create other releases
+      run: |
+        gh release create v2.2.0.a --target build-linux
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
