--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -20,7 +20,7 @@ jobs:
         python-version: '3.x'
     - name: Create other releases
       run: |
-        gh release create v2.2.0.a --target build-linux
+        python make_releases.py ${{ secrets.ACCESS_TOKEN }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
