--- a/.github/workflows/pust_to_other.yml
+++ b/.github/workflows/pust_to_other.yml
@@ -21,6 +21,6 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-    - name: Test with pytest
+    - name: Push to other branches
       run: |
         python push_to_branches.py ${{ secrets.ACCESS_TOKEN }}
