--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -5,9 +5,9 @@ name: Python package
 
 on:
   push:
-    branches: [ master ]
+    branches: [ build-linux ]
   pull_request:
-    branches: [ master ]
+    branches: [ build-linux ]
 
 jobs:
   build:
