--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   deploy:
 
-    runs-on: macOS-latest
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python
@@ -21,30 +21,12 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install setuptools wheel twine
-
-    - name: Build Windows 32
-      run: |
-        python setup.py bdist_wheel
-        python rename.py win32
-    - name: Build Windows x64
-      run: |
-        python setup.py bdist_wheel
-        python rename.py amd64
     - name: Build Linux
       run: |
         python setup.py bdist_wheel
         python rename.py linux
         python setup.py bdist_wheel
         python rename.py centos
-
-    - name: Build Darwin 15 and above
-      run: |
-        python setup.py bdist_wheel
-        python rename.py macos15
-    - name: Build Darwin
-      run: |
-        python setup.py bdist_wheel
-        python rename.py macos
 
     - name: Publish
       env:
