--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   deploy:
 
-    runs-on: windows-latest
+    runs-on: macOS-latest
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python
