--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -28,6 +28,7 @@ jobs:
       run: |
         python setup.py bdist_wheel
         python rename.py linux_intel ${{ matrix.python-version }}
+    - name: Build Linux aarch
         python setup.py bdist_wheel
         python rename.py linux_aarch ${{ matrix.python-version }}
     - name: Publish
