--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -11,6 +11,7 @@ jobs:
   deploy:
 
     runs-on: windows-latest
+
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python
@@ -21,11 +22,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install setuptools wheel twine
-
-    - name: Build
+    - name: Build Windows
       run: |
         python setup.py sdist
-
     - name: Publish
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USER_NAME }}
