--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -11,7 +11,6 @@ jobs:
   deploy:
 
     runs-on: windows-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python
@@ -22,9 +21,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install setuptools wheel twine
-    - name: Build Windows
+
+    - name: Build
       run: |
         python setup.py sdist
+
     - name: Publish
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USER_NAME }}
