--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -24,6 +24,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        python downloader.py linux ${{ secrets.ACCESS_TOKEN }}
     - name: Build Linux
       run: |
         python setup.py bdist_wheel
