--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -21,7 +21,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-
+        python downloader.py win32 ${{ secrets.ACCESS_TOKEN }}
     - name: Build Windows x86
       run: |
         python setup.py bdist_wheel
