--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -11,15 +11,12 @@ jobs:
   deploy:
 
     runs-on: macOS-latest
-    strategy:
-      matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10"]
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: '3.x'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -28,15 +25,15 @@ jobs:
     - name: Build Darwin 11
       run: |
         python setup.py bdist_wheel
-        python rename.py macos11 ${{ matrix.python-version }}
+        python rename.py macos11
     - name: Build Darwin intel
       run: |
         python setup.py bdist_wheel
-        python rename.py macos_intel ${{ matrix.python-version }}
+        python rename.py macos_intel
     - name: Build Darwin universal
       run: |
         python setup.py bdist_wheel
-        python rename.py macos_uni ${{ matrix.python-version }}
+        python rename.py macos_uni
     - name: Publish
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USER_NAME }}
