--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -11,15 +11,12 @@ jobs:
   deploy:
 
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10"]
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: '3.x'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -28,11 +25,11 @@ jobs:
     - name: Build Linux
       run: |
         python setup.py bdist_wheel
-        python rename.py linux_intel ${{ matrix.python-version }}
+        python rename.py linux_intel
     - name: Build Linux aarch
       run: |
         python setup.py bdist_wheel
-        python rename.py linux_aarch ${{ matrix.python-version }}
+        python rename.py linux_aarch
     - name: Publish
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USER_NAME }}
