--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -27,8 +27,8 @@ jobs:
         python setup.py sdist
 
     - name: Publish
-      env:
-        TWINE_USERNAME: ${{ secrets.PYPI_USER_NAME }}
-        TWINE_PASSWORD: ${{ secrets.PYPI_PASS_WORD }}
+      #env:
+        #TWINE_USERNAME: ${{ secrets.PYPI_USER_NAME }}
+        #TWINE_PASSWORD: ${{ secrets.PYPI_PASS_WORD }}
       run: |
         twine upload dist/*
