--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -31,4 +31,4 @@ jobs:
         #TWINE_USERNAME: ${{ secrets.PYPI_USER_NAME }}
         #TWINE_PASSWORD: ${{ secrets.PYPI_PASS_WORD }}
       run: |
-        twine upload dist/*
+        twine upload dist/* --trusted-publish
