--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -11,7 +11,7 @@ jobs:
   deploy:
 
 
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     permissions:
        # IMPORTANT: this permission is mandatory for Trusted Publishing
        id-token: write
