--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -24,7 +24,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        python download_binaries.py darwin ${{ secrets.ACCESS_TOKEN }}
+        python downloader.py darwin ${{ secrets.ACCESS_TOKEN }}
     - name: Build Darwin 11
       run: |
         python setup.py bdist_wheel
